--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "",
-  "version": "",
+  "name": "tutorial",
+  "version": "1.0.0",
+  "description": "bofff",
+  "main": "index.js",
   "dependencies": {
-    "discord.js": "^11.3.2",
-    "semver": "^5.5.0"
+    "discord.js": "^11.3.0"
   }
 }
