--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
-  "name": "tutorial",
-  "version": "1.0.0",
-  "description": "bofff",
-  "main": "index.js",
+  "name": "Test",
+  "description": "Test",
+  "version": "0.0.0",
+  "main": "bot.js",
+  "scripts": {
+    "start": "node bot.js"
+  },
   "dependencies": {
-    "discord.js": "^11.3.0"
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
   }
 }
